--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.+'
     implementation 'com.android.support:cardview-v7:27.+'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    // butter knife
+//    implementation 'com.jakewharton:butterknife:8.8.1'
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
